# plutosvg

./: CMakeLists.txt
cmake/: plutosvgConfig.cmake.in
